# StudyTUI

./: README.md  app.py  config.py  main.py  pyproject.toml  theme.tcss
ai/: provider.py
aur/: PKGBUILD
database/: schema.py
screens/: ai_chat.py  calendar.py  dashboard.py  flashcards.py  notes.py  pomodoro.py  settings.py  tasks.py
utils/: markdown.py
