[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "studytui"
version = "0.1.0"
description = "Terminal-based study tracker with AI features: notes, Kanban tasks, flashcards (SM-2), pomodoro, calendar, and Gemini AI assistant."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "textual>=8.0",
    "aiohttp>=3.9",
]

[project.scripts]
studytui = "main:main"
